[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snow_globe"
version = "0.0.1"
authors = [
  { name="Miron van der Kolk", email="mironvanderkolk@proton.me" },
]
description = "Procedurally generate snow globe static renders and animations "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mironleon/snow_globe"
"Bug Tracker" = "https://github.com/mironleon/snow_globe/issues"